--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 apache_mirror: http://apache.mirrors.tds.net
-kafka_hosts: "{{ansible_fqdn}}:9092"
+kafka_port: 9092
+kafka_fqdn: "{{ ansible_fqdn }}"
+kafka_hosts: "{{ kafka_fqdn }}:{{ kafka_port }}"
 kafka_version: 0.8.1.1
 kafka_version_cloudera: 2.9.2
 run_mode: Deploy
@@ -11,7 +13,6 @@ kafka_java_version: 7
 kafka_num_network_threads: 2
 kafka_num_io_threads: 2
 kafka_num_partitions: 2
-kafka_port: 9092
 kafka_socket_send_buffer_bytes: 1048576
 kafka_socket_receive_buffer_bytes: 1048576
 kafka_socket_request_max_bytes: 104857600
